<resources>
    <string name="app_name">Tip Time</string>
    <string name="how_was_the_service">How was the Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">Okay (15%)</string>
    <string name="round_off_tip">Round off tip ?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="amazing_service">Amazing (20%)</string>
</resources>